--- a/src/app.css
+++ b/src/app.css
@@ -7,3 +7,16 @@
       font-family: Poppins;
     }
 }
+
+.bouton-lien {
+  background-color: #e9e9ed;
+  border: 0.2px solid #8f8f9d;
+  border-radius: 5px;
+  padding: 3px;
+  color: black;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: small;
+  text-align: center;
+  text-decoration: none;
+  cursor: default;
+}
