--- a/src/app.css
+++ b/src/app.css
@@ -9,8 +9,8 @@
 }
 
 .bouton-lien {
-  background-color: #e9e9ed;
-  border: 0.2px solid #8f8f9d;
+  background-color: #1717d8;
+  border: 0.2px solid #000000;
   border-radius: 5px;
   padding: 3px;
   color: black;
